refactoring resource directories and add spelldbctable class

--- a/QtGui/siruspatcherwindow.ui
+++ b/QtGui/siruspatcherwindow.ui
@@ -207,7 +207,7 @@ QPushButton:hover
      <enum>QTabWidget::West</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="SettingsTab">
      <property name="styleSheet">
@@ -281,6 +281,31 @@ QPushButton:hover
      <attribute name="title">
       <string/>
      </attribute>
+     <widget class="QTableWidget" name="SpellTableWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>821</width>
+        <height>531</height>
+       </rect>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::NoSelection</enum>
+      </property>
+      <property name="rowCount">
+       <number>0</number>
+      </property>
+      <property name="columnCount">
+       <number>0</number>
+      </property>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+     </widget>
     </widget>
     <widget class="QWidget" name="AboutTab">
      <attribute name="title">
