--- a/QtGui/resources.qrc
+++ b/QtGui/resources.qrc
@@ -1,9 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/splash-screen.png</file>
-        <file>text/version</file>
-        <file>icons/close.png</file>
-        <file>icons/hide.png</file>
-        <file>icons/window.ico</file>
+        <file>resources/images/splash-screen.png</file>
+        <file>resources/text/version</file>
+        <file>resources/icons/close.png</file>
+        <file>resources/icons/hide.png</file>
+        <file>resources/icons/window.ico</file>
+        <file>resources/dbc/Spell.dbc.json</file>
     </qresource>
 </RCC>
