--- a/QtGui/siruspatcherwindow.ui
+++ b/QtGui/siruspatcherwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>600</height>
+    <height>630</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -25,15 +25,15 @@
   <property name="maximumSize">
    <size>
     <width>1000</width>
-    <height>600</height>
+    <height>9999</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Sirus Patcher</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>:/icons/window.ico</normaloff>:/icons/window.ico</iconset>
+   <iconset resource="resources.qrc">
+    <normaloff>:/resources/icons/window.ico</normaloff>:/resources/icons/window.ico</iconset>
   </property>
   <widget class="QWidget" name="CentralWidget">
    <widget class="WindowHeaderWidget" name="HeaderWidget" native="true">
@@ -192,6 +192,9 @@ QPushButton:hover
     <zorder>CloseButton</zorder>
    </widget>
    <widget class="QTabWidget" name="MainTabWidget">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -227,14 +230,14 @@ QPushButton:hover
       </property>
       <property name="font">
        <font>
-        <pointsize>11</pointsize>
+        <pointsize>10</pointsize>
        </font>
       </property>
       <property name="text">
        <string>Выбрать</string>
       </property>
      </widget>
-     <widget class="QLabel" name="DirectoryLabel">
+     <widget class="QLabel" name="GameDirectoryLabel">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -252,7 +255,7 @@ QPushButton:hover
        <string>Путь до директории с World of Warcraft:</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="DirectoryLine">
+     <widget class="QLineEdit" name="GameDirectoryLine">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -278,17 +281,26 @@ QPushButton:hover
      </widget>
     </widget>
     <widget class="QWidget" name="SpellTab">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <attribute name="title">
       <string/>
      </attribute>
      <widget class="QTableWidget" name="SpellTableWidget">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>821</width>
-        <height>531</height>
+        <width>831</width>
+        <height>461</height>
        </rect>
+      </property>
+      <property name="autoScroll">
+       <bool>false</bool>
       </property>
       <property name="editTriggers">
        <set>QAbstractItemView::NoEditTriggers</set>
@@ -296,15 +308,125 @@ QPushButton:hover
       <property name="selectionMode">
        <enum>QAbstractItemView::NoSelection</enum>
       </property>
+      <property name="verticalScrollMode">
+       <enum>QAbstractItemView::ScrollPerPixel</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
       <property name="rowCount">
        <number>0</number>
       </property>
       <property name="columnCount">
        <number>0</number>
       </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>35</number>
+      </attribute>
       <attribute name="verticalHeaderVisible">
        <bool>false</bool>
       </attribute>
+     </widget>
+     <widget class="QPushButton" name="EnableAllCBSPellButton">
+      <property name="geometry">
+       <rect>
+        <x>630</x>
+        <y>510</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Включить всё</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="DisableAllCBSpellButton">
+      <property name="geometry">
+       <rect>
+        <x>740</x>
+        <y>510</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Выключить всё</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="SearchSpellLine">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>510</y>
+        <width>501</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="SearchSpellButton">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>520</x>
+        <y>510</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Поиск</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="SearchCriterionSpellBox">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>480</y>
+        <width>221</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="SearchCriterionSpellLabel">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>480</y>
+        <width>261</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Критерий поиска</string>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="AboutTab">
@@ -315,7 +437,7 @@ QPushButton:hover
       <property name="geometry">
        <rect>
         <x>770</x>
-        <y>510</y>
+        <y>520</y>
         <width>61</width>
         <height>21</height>
        </rect>
@@ -326,11 +448,51 @@ QPushButton:hover
      </widget>
     </widget>
    </widget>
+   <widget class="QPushButton" name="CreatePatchButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>590</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Создать патч!</string>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="ProgressBar">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>590</y>
+      <width>731</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
    <zorder>HeaderButtonsWidget</zorder>
    <zorder>HeaderWidget</zorder>
    <zorder>MainTabWidget</zorder>
+   <zorder>CreatePatchButton</zorder>
+   <zorder>ProgressBar</zorder>
   </widget>
-  <widget class="QStatusBar" name="StatusBar"/>
  </widget>
  <customwidgets>
   <customwidget>
@@ -340,6 +502,8 @@ QPushButton:hover
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
