--- a/QtGui/resources.qrc
+++ b/QtGui/resources.qrc
@@ -6,6 +6,7 @@
         <file>resources/icons/hide.png</file>
         <file>resources/icons/window.ico</file>
         <file>resources/dbc/Spell.dbc.json</file>
+        <file>resources/dbc/SpellItemEnchantment.dbc.json</file>
         <file>resources/icons/check.png</file>
         <file>resources/icons/cross.png</file>
         <file>resources/icons/minus.png</file>
