--- a/QtGui/siruspatcherwindow.ui
+++ b/QtGui/siruspatcherwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>690</height>
+    <height>657</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,7 +19,7 @@
   <property name="minimumSize">
    <size>
     <width>1000</width>
-    <height>690</height>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -36,161 +36,6 @@
     <normaloff>:/resources/icons/window.ico</normaloff>:/resources/icons/window.ico</iconset>
   </property>
   <widget class="QWidget" name="CentralWidget">
-   <widget class="WindowHeaderWidget" name="HeaderWidget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>940</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(179, 245, 255);</string>
-    </property>
-    <widget class="QLabel" name="WindowIcon">
-     <property name="geometry">
-      <rect>
-       <x>5</x>
-       <y>4</y>
-       <width>21</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">image: url(://resources/icons/window.ico);</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QLabel" name="WindowName">
-     <property name="geometry">
-      <rect>
-       <x>32</x>
-       <y>4</y>
-       <width>321</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QLabel" name="BackgroundHeader">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>940</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <zorder>BackgroundHeader</zorder>
-    <zorder>WindowIcon</zorder>
-    <zorder>WindowName</zorder>
-   </widget>
-   <widget class="QWidget" name="HeaderButtonsWidget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>939</x>
-      <y>0</y>
-      <width>62</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(179, 245, 255);</string>
-    </property>
-    <widget class="QPushButton" name="CloseButton">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>0</y>
-       <width>32</width>
-       <height>32</height>
-      </rect>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton
-{
-   
-	image: url(://resources/icons/close.png);
-}
-QPushButton:hover
-{
-   
-	background-color: rgb(255, 84, 84);
-}</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>41</width>
-       <height>41</height>
-      </size>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="HideButton">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>32</width>
-       <height>32</height>
-      </rect>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton
-{
-   
-	image: url(://resources/icons/hide.png);
-}
-QPushButton:hover
-{
-	background-color: rgb(39, 147, 224);
-}</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset>
-       <normaloff>:/icons/hide.ico</normaloff>:/icons/hide.ico</iconset>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>41</width>
-       <height>41</height>
-      </size>
-     </property>
-    </widget>
-    <zorder>HideButton</zorder>
-    <zorder>CloseButton</zorder>
-   </widget>
    <widget class="QTabWidget" name="MainTabWidget">
     <property name="enabled">
      <bool>true</bool>
@@ -198,8 +43,8 @@ QPushButton:hover
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>40</y>
-      <width>1001</width>
+      <y>10</y>
+      <width>998</width>
       <height>531</height>
      </rect>
     </property>
@@ -207,7 +52,7 @@ QPushButton:hover
      <string notr="true">QTabBar::tab { height: 70px; width: 150px; }</string>
     </property>
     <property name="tabPosition">
-     <enum>QTabWidget::West</enum>
+     <enum>QTabWidget::TabPosition::West</enum>
     </property>
     <property name="currentIndex">
      <number>0</number>
@@ -218,6 +63,9 @@ QPushButton:hover
      </property>
      <attribute name="title">
       <string/>
+     </attribute>
+     <attribute name="toolTip">
+      <string>Настройки программы</string>
      </attribute>
      <widget class="QPushButton" name="ChooseDirectoryButton">
       <property name="geometry">
@@ -445,6 +293,9 @@ QPushButton:hover
      <attribute name="title">
       <string/>
      </attribute>
+     <attribute name="toolTip">
+      <string>Редактирование заклинаний</string>
+     </attribute>
      <widget class="QTableWidget" name="SpellTableWidget">
       <property name="geometry">
        <rect>
@@ -458,19 +309,19 @@ QPushButton:hover
        <bool>false</bool>
       </property>
       <property name="editTriggers">
-       <set>QAbstractItemView::NoEditTriggers</set>
+       <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
       </property>
       <property name="selectionMode">
-       <enum>QAbstractItemView::SingleSelection</enum>
+       <enum>QAbstractItemView::SelectionMode::SingleSelection</enum>
       </property>
       <property name="selectionBehavior">
-       <enum>QAbstractItemView::SelectRows</enum>
+       <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
       </property>
       <property name="verticalScrollMode">
-       <enum>QAbstractItemView::ScrollPerPixel</enum>
+       <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
       </property>
       <property name="horizontalScrollMode">
-       <enum>QAbstractItemView::ScrollPerPixel</enum>
+       <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
       </property>
       <property name="sortingEnabled">
        <bool>true</bool>
@@ -487,6 +338,9 @@ QPushButton:hover
      <attribute name="title">
       <string/>
      </attribute>
+     <attribute name="toolTip">
+      <string>Редактирование иллюзий зачарований</string>
+     </attribute>
      <widget class="QTableWidget" name="EnchantTableWidget">
       <property name="geometry">
        <rect>
@@ -500,19 +354,19 @@ QPushButton:hover
        <bool>false</bool>
       </property>
       <property name="editTriggers">
-       <set>QAbstractItemView::NoEditTriggers</set>
+       <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
       </property>
       <property name="selectionMode">
-       <enum>QAbstractItemView::SingleSelection</enum>
+       <enum>QAbstractItemView::SelectionMode::SingleSelection</enum>
       </property>
       <property name="selectionBehavior">
-       <enum>QAbstractItemView::SelectRows</enum>
+       <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
       </property>
       <property name="verticalScrollMode">
-       <enum>QAbstractItemView::ScrollPerPixel</enum>
+       <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
       </property>
       <property name="horizontalScrollMode">
-       <enum>QAbstractItemView::ScrollPerPixel</enum>
+       <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
       </property>
       <property name="sortingEnabled">
        <bool>true</bool>
@@ -525,6 +379,9 @@ QPushButton:hover
     <widget class="QWidget" name="FeaturesTab">
      <attribute name="title">
       <string/>
+     </attribute>
+     <attribute name="toolTip">
+      <string>Дополнительные настройки</string>
      </attribute>
      <widget class="QWidget" name="FeaturesWidget" native="true">
       <property name="geometry">
@@ -577,6 +434,9 @@ QPushButton:hover
      <attribute name="title">
       <string/>
      </attribute>
+     <attribute name="toolTip">
+      <string>Информация о программе и авторе</string>
+     </attribute>
      <widget class="QTextBrowser" name="AboutText">
       <property name="geometry">
        <rect>
@@ -590,6 +450,9 @@ QPushButton:hover
        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:700;&quot;&gt;Sirus Patcher&lt;/span&gt;&lt;span style=&quot; font-size:16pt;&quot;&gt; - программа для создания кастомного патча под сервер &lt;/span&gt;&lt;a href=&quot;https://sirus.su/&quot;&gt;&lt;span style=&quot; font-size:16pt; font-style:italic; text-decoration: underline; color:#007af4;&quot;&gt;Sirus.su&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:16pt; font-style:italic;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
@@ -604,7 +467,7 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:16pt;&quot;&gt;Исходный код программы на &lt;/span&gt;&lt;a href=&quot;https://github.com/MrSago/SirusPatcher&quot;&gt;&lt;span style=&quot; font-size:16pt; font-style:italic; text-decoration: underline; color:#007af4;&quot;&gt;GitHub&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="textInteractionFlags">
-       <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse</set>
+       <set>Qt::TextInteractionFlag::LinksAccessibleByKeyboard|Qt::TextInteractionFlag::LinksAccessibleByMouse</set>
       </property>
       <property name="openExternalLinks">
        <bool>true</bool>
@@ -622,7 +485,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>650</y>
+      <y>620</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -640,7 +503,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>650</y>
+      <y>620</y>
       <width>731</width>
       <height>31</height>
      </rect>
@@ -661,7 +524,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>610</y>
+      <y>580</y>
       <width>511</width>
       <height>31</height>
      </rect>
@@ -674,7 +537,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>580</y>
+      <y>550</y>
       <width>221</width>
       <height>24</height>
      </rect>
@@ -687,7 +550,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>380</x>
-      <y>580</y>
+      <y>550</y>
       <width>271</width>
       <height>21</height>
      </rect>
@@ -708,7 +571,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>610</y>
+      <y>580</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -729,7 +592,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>780</x>
-      <y>610</y>
+      <y>580</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -750,7 +613,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>610</y>
+      <y>580</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -764,27 +627,8 @@ p, li { white-space: pre-wrap; }
      <string>Выключить всё</string>
     </property>
    </widget>
-   <zorder>HeaderButtonsWidget</zorder>
-   <zorder>HeaderWidget</zorder>
-   <zorder>MainTabWidget</zorder>
-   <zorder>CreatePatchButton</zorder>
-   <zorder>ProgressBar</zorder>
-   <zorder>SearchLine</zorder>
-   <zorder>SearchCriterionBox</zorder>
-   <zorder>SearchCriterionLabel</zorder>
-   <zorder>SearchButton</zorder>
-   <zorder>EnableAllCBButton</zorder>
-   <zorder>DisableAllCBButton</zorder>
   </widget>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>WindowHeaderWidget</class>
-   <extends>QWidget</extends>
-   <header>QtGui/windowheaderwidget.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources>
   <include location="resources.qrc"/>
  </resources>
